--- a/wisdomCampus/html/studentManage/student-attendanceDetail.html
+++ b/wisdomCampus/html/studentManage/student-attendanceDetail.html
@@ -200,7 +200,7 @@
 					</li>
 					<li class="mui-table-view-cell">
 						<a>
-							<p class="mui-pull-right liDetail" v-for="nodeSub in attendanceDetail.nodeSubJson">{{nodeSub.subName}}</p>
+							<p class="mui-pull-right liDetail" v-for="nodeSub in attendanceDetialData.nodeSubJson">{{nodeSub.subName}}</p>
 							<div class="mui-media-body liTitle">
 								科目
 							</div>
@@ -270,7 +270,7 @@
 									<li class="mui-table-view-cell" style="padding: 0;" v-for="jc in jcList">
 										<div class="mui-input-row mui-checkbox mui-right">
 											<label style="width: 100%;">{{jc.text}}</label>
-											<template v-if="abc.classNodes.indexOf(jc.value) !=-1">
+											<template v-if="abc.classNodes.indexOf(String(jc.value)) !=-1">
 												<input :name="jc.text" :value="jc.value" type="checkbox" :checked="abc.classCanCheck==-1? false:true" :disabled="abc.classCanCheck==-1">
 											</template>
 											<template v-else>
@@ -374,12 +374,18 @@
 						
 						nodes.attendanceTime = attendanceDetialData.attendanceDetail.attendanceTime;
 						nodes.classNames = attendanceDetialData.attendanceDetail.period;
-						nodes.classNodes = attendanceDetialData.attendanceDetail.classNodes;
-						
+						var classArr=attendanceDetialData.attendanceDetail.classNodes.split(",");
+						nodes.classNodes=classArr;
+						if(classArr.length>1){
+							nodes.kmShow=-1; 
+						}
 						nodes.subCodes= attendanceDetialData.attendanceDetail.subCodes;
 						for(var i=0;i<attendanceDetialData.kmList.length;i++){
 							if(attendanceDetialData.kmList[i].value==attendanceDetialData.attendanceDetail.subCodes){
 								nodes.subName=attendanceDetialData.kmList[i].text;
+								break;
+							}else{
+								nodes.subName='暂无科目'
 							}
 						}
 						if(attendanceDetialData.attendanceDetail.classNodes=='day'){
@@ -535,11 +541,10 @@
 							}
 						})
 						var nodes = this.nodeSubJson[index];
+						nodes.classNodes =  [];
 						if(names.length>0){
 							if(classes.indexOf("day") != -1){
-								classes=[];
-								classes.push('day');
-								nodes.classNodes =classes.join(",");
+								nodes.classNodes.push('day');
 								nodes.classNames ='全天';
 								nodes.kmShow=-1;
 								nodes.subName = '请选择';
@@ -593,10 +598,12 @@
 							title.titleBar = '提交';
 							attendanceDetialData.attendanceDetail.recordTime = getDate();
 							var nodes=attendanceDetialData.nodeSubJson[0];
-							if(nodes.kmShow==-1){
+							if(nodes.kmShow==1){
 								nodes.subName = '请选择';
 								nodes.subCodes = '';
 							}
+							console.log(JSON.stringify(attendanceDetialData.nodeSubJson))
+							attendanceDetialData.$set(attendanceDetialData.nodeSubJson,0,nodes)
 						}
 
 					},
@@ -606,7 +613,8 @@
 							var obj = attendanceDetialData.nodeSubJson[i];
 							var params = {
 								attendanceTime: obj.attendanceTime,
-								classNodes: obj.classNodes
+								classNodes: obj.classNodes,
+								subCodes:obj.subCodes
 							}
 							arr.push(params);
 						}
