考勤、谈话、行为首页选择框调整

--- a/wisdomCampus/html/studentManage/student-action.html
+++ b/wisdomCampus/html/studentManage/student-action.html
@@ -146,7 +146,8 @@
 			var totalPageCount; //总页码
 			var flagRef = 0; //是刷新0，还是加载更多1
 			
-			
+			var userPicker,userPickerType;
+			var canUpdate=true;
 			var actionArrayData = new Vue({
 				el: "#actionArrayData",
 				data: {
@@ -202,8 +203,6 @@
 				},
 				methods:{
 					selectGrade:function(){
-						var userPicker = new m$.PopPicker({layer: 2});
-						userPicker.setData(selectTitle.list);
 						userPicker.show(function(items) {
 							selectTitle.grade=_getParam(items[0], 'text');
 							selectTitle.classes=_getParam(items[1], 'text');
@@ -220,9 +219,8 @@
 						this.$options.methods.selectGrade();
 					},
 					selectBehavior:function(){
-						var userPicker = new m$.PopPicker({layer: 1});
-						userPicker.setData(selectTitle.btArray);
-						userPicker.show(function(items) {
+						
+						userPickerType.show(function(items) {
 							selectTitle.behavior=_getParam(items[0], 'text');
 							selectTitle.behaviorValue=_getParam(items[0], 'value');
 							pageIndex = 1;
@@ -240,6 +238,8 @@
 				studentMP.getStudentManagePermission(1,1,function(array){
 					console.log("ABCD=="+JSON.stringify(array))
 					selectTitle.list=array;
+					userPicker = new m$.PopPicker({layer: 2});
+					userPicker.setData(selectTitle.list);
 					if(array.length>0){
 						var allGrade=array[0];
 						var allClasses=allGrade.children[0];
@@ -328,6 +328,12 @@
 						}];
 						var signArr = temp.concat(btnArr);
 						selectTitle.btArray=signArr;
+						if(canUpdate){//行为类型选择框只初始化一遍
+							canUpdate=false;
+							userPickerType= new m$.PopPicker({layer: 1});
+							userPickerType.setData(selectTitle.btArray);
+						}
+						
 						pageIndex++;
 						if(flagRef == 0) { //刷新
 							studentMP.setGrdNameClsName(selectTitle.list,data.RspData.list,function(array){
