--- a/wisdomCampus/html/studentManage/student-attendance-add.html
+++ b/wisdomCampus/html/studentManage/student-attendance-add.html
@@ -576,6 +576,7 @@
 							}
 						})
 						var nodes = this.nodeSubJson[index];
+						nodes.classNodes =  [];
 						if(names.length > 0) {
 							if(classes.indexOf("day") != -1){
 								nodes.classNodes.push('day');
@@ -656,6 +657,17 @@
 							mui.toast('内容最多120字');
 						} else {
 							console.log(JSON.stringify(arr))
+							var lxsj,hxsj;
+							if(talkTitle.lxsj=='请选择'){
+								lxsj=''
+							}else{
+								lxsj=talkTitle.lxsj;
+							}
+							if(talkTitle.hxsj=='请选择'){
+								hxsj=''
+							}else{
+								hxsj=talkTitle.hxsj;
+							}
 							var comData = {
 								id: '',
 								gradeId: talkTitle.sGrade, //年级id
@@ -668,23 +680,23 @@
 								explain: talkTitle.content, //考勤说明
 								outsidePermisionCode: talkTitle.qValue, //出入校门权限编码
 								recordTime: talkTitle.jlsj, //记录时间
-								leaveSchoolTime: talkTitle.lxsj, //离校时间
-								backSchoolTime: talkTitle.hxsj //回校时间
+								leaveSchoolTime: lxsj, //离校时间
+								backSchoolTime: hxsj //回校时间
 							}
 							console.log(JSON.stringify(comData));
-							var wd = events.showWaiting();
-							getSaveAttendance(comData, function(data) {
-								wd.close();
-								console.log('3.保存考勤' + JSON.stringify(data));
-								if(data.RspCode == 0) {
-									mui.toast('保存成功');
-									setTimeout(function() {
-										mui.back();
-									}, 2000)
-								} else {
-									mui.toast(data.RspTxt);
-								}
-							});
+//							var wd = events.showWaiting();
+//							getSaveAttendance(comData, function(data) {
+//								wd.close();
+//								console.log('3.保存考勤' + JSON.stringify(data));
+//								if(data.RspCode == 0) {
+//									mui.toast('保存成功');
+//									setTimeout(function() {
+//										mui.back();
+//									}, 2000)
+//								} else {
+//									mui.toast(data.RspTxt);
+//								}
+//							});
 						}
 
 					}
